--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
     <script src="sketch.js"></script>
     <script src="Dir_y_Vel.js"></script>
+    <script src="printData.js"></script>
     <script src="GestorDeInteracion.js"></script>
   </body>
 </html>
